# nes-ai

./: .gitignore  AGENTS.md  README.md  action_distance_cfm.py  action_distance_cfm_skill.py  action_distance_eval.py  action_distance_metric_plot.py  action_distance_recon.py  action_distance_recon_coatnet.py  action_distance_recon_deeplab.py  action_distance_recon_mobilenet.py  action_distance_recon_resnet.py  action_distance_train.py  check_load_vs_recon.py  clean_trajectory.py  debug_predict_mario_multi.py  diff_mario.py  gridworldkey_env.py  image_distance_eval.py  image_distance_train.py  image_distance_vs_steps.py  inspect_actions.py  jepa_enc_dec_only.py  jepa_isomap_viewer.py  jepa_world_model_trainer.py  latent_action_influence.py  latent_distance.py  latent_distance_causal.py  latent_intervention_learning.py  learn_by_clustering_new_data.py  mario_animate.py  mario_maps.py  nes_controller.py  png_to_npz.py  png_to_npz_combined.py  ppo_atari.py  predict_mario.py  predict_mario3.py  predict_mario4.py  predict_mario_ms_ssim.py  (+36 more)
four_rooms/: four_rooms_env.py  ppo_four_rooms.py  ppo_rnd_four_rooms.py
jepa_world_model/: actions.py  config_diagnostics.py  config_planning.py  conv_encoder_decoder.py  convnext_encoder_decoder_plan.md  convnextv2.py  data.py  diagnostics_alignment.py  diagnostics_consistency.py  diagnostics_graph.py  diagnostics_prepare.py  diagnostics_rollout_divergence.py  diagnostics_rollout_visuals.py  diagnostics_runner.py  diagnostics_utils.py  diagnostics_vis_ctrl.py  encoder_schedule.py  flops.py  format.py  hard_sample_reservoir.py  loss.py  loss_adjacency.py  loss_geometry.py  loss_multi_scale_hardness.py  loss_patch_recon.py  loss_recon.py  loss_sigreg.py  metadata.py  model.py  model_config.py  plot_raincloud.py  plot_strip_scatter.py  pose_rollout.py  rollout.py  step_schedule.py  vis.py  vis_action_alignment.py  vis_composability.py  vis_cycle_error.py  vis_diagnostics.py  (+15 more)
(+273 files in other folders)
