[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython"
]
build-backend = "setuptools.build_meta"

[project]
name = "nes-ai"
version = "0.0.0"
description = "Research scripts and utilities for NES-based agents."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ale-py",
    "av",
    "click",
    "Cython",
    "datasets",
    # "envpool",
    "fastai",
    # "gym",
    "gymnasium[all]",
    "gymnasium[atari]",
    "huggingface-hub",
    "imagehash",
    "matplotlib",
    "numpy",
    "openai",
    "Pillow",
    "plotly",
    "Flask",
    # "plyvel",
    "pydantic",
    "pygame",
    "PyOpenGL",
    "python-dotenv",
    "pytorch-lightning",
    "scikit-learn",
    "sqlitedict",
    "stable-baselines3",
    "tensorboard",
    "tensordict",
    "termcolor",
    "timm",
    "tomli-w",
    "torch",
    "torch-optimizer",
    "torcheval",
    "torchrl",
    "torchvision",
    "tqdm",
    "transformers",
    "tyro",
    "umap-learn",
    "wandb",
]

[tool.uv]
dev-dependencies = []
